force-app/main/default/objects/noduplicates__Test_Obj1__c/fields/noduplicates__Checkbox__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>