force-app/main/default/objects/noduplicates__Test_Obj1__c/fields/noduplicates__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>