force-app/main/default/objects/noduplicates__Test_Obj1__c/fields/noduplicates__TextAreaRich__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__TextAreaRich__c</fullName>
    <label>TextAreaRich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>