force-app/main/default/objects/noduplicates__Test_Obj1__c/fields/noduplicates__Time__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Time__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>